2010-08-24
 - CTRL+A selects all QGraphicsItems in the scene now
 - fixed a BUG where the program crashed if a new connection was drawn from a Port to nowhere, see GraphicsScene::mouseReleaseEvent(..)
 - class ObjectPool extends the GraphicsScene to give View objects as 'Connection', 'Module' or 'Port' access to translate
   QGraphicsItems into QPersistentModelIndex'es and vice versa without having to use the 'scene' pointer as done before
 - reduced code in GraphicsScene as this 3 functions were moved to class ObjectPool:
  - QGraphicsItem* model2GraphicsItem( QPersistentModelIndex index );
  - QPersistentModelIndex graphicsItem2Model ( QGraphicsItem* graphicsItem );
  - bool compareIndexes( const QPersistentModelIndex & a, const QPersistentModelIndex & b );
 - made rowsInserted more simple to read
 - ObjectPool can be extended or profiled for other purposes but helps to seperate jobs to different classes

2010-08-23
 - removed branching of moduleInserted(..) and connectionInserted(..). a generic interface handles that now.
 - removed branching of rowsRemoved(..) to moduleRemoved(..) and connectionRemoved(..). a generic interface handles that now.

2010-08-22
 - removed ItemView.cpp/ItemView.h and the class. the former implementation was moved to GraphicsScene
 - ISSUE: selection of 'Connections' is - again - tricky? somehow the shape() is not used?!
 - DataItemType was extended by EXTENDEDGRAPHICSITEM
 - Module.h, Connection.h, Port.h was extended using a generic type() return EXTENDEDGRAPHICSITEM 
   as well as a specialized type (was was used for type() before)
 - GraphicsScene was adapted to distinguish between EXTENDEDGRAPHICSITEM and specialized type

2010-08-20
 - inserted a dummy picture for the module module
 - added a resource file, adapted the src/CMakeLists.txt to use it

2010-08-19
 - Connection uses QGraphicsPathItem instead of QGraphicsLineItem
 - partial fix on the QTreeView issue, needs further fixing: see TODO